<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/transparent"
        android:cursorVisible="true"
        android:gravity="top"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/memorandum"
        android:textColor="@color/colorTextPrimary"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray" />


    <RelativeLayout
        android:id="@+id/set_time_ll"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingEnd="30dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/remind_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_time"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/remind_time"
            android:layout_marginTop="13dp"
            android:text="@string/set_time"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/add" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray" />

    <RelativeLayout
        android:id="@+id/repeat_ll"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingEnd="30dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_location"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/repeat"
            android:layout_marginTop="13dp"
            android:text="@string/set_location"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:id="@+id/textView2" />
        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingEnd="30dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/remind_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_location"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/remind_location"
            android:layout_marginTop="13dp"
            android:text="@string/set_location"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/add" />
    </RelativeLayout>


</LinearLayout>